--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,26 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+  color: rgb(11, 11, 11);
+  /* background-color: rgb(39, 38, 38); */
+  background-image: url("https://static.vecteezy.com/system/resources/previews/005/397/068/large_2x/fiberboard-board-texture-blank-kraft-paper-sheet-for-decoration-retro-grainy-surface-background-textured-vintage-wall-made-of-natural-fiber-decorative-and-design-handmade-brown-cardboard-photo.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.container {
+   display: flex;
+   flex-wrap: wrap; 
+   justify-content: space-around;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Ascend Notes title */
+.formContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.formContainer h1{
+  font-family: 'Akaya Kanadaka';
+  font-size: 5em;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
