--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,5 @@
 body {
-  color: rgb(11, 11, 11);
-  /* background-color: rgb(39, 38, 38); */
+  /* color: rgb(11, 11, 11); */
   background-image: url("https://static.vecteezy.com/system/resources/previews/005/397/068/large_2x/fiberboard-board-texture-blank-kraft-paper-sheet-for-decoration-retro-grainy-surface-background-textured-vintage-wall-made-of-natural-fiber-decorative-and-design-handmade-brown-cardboard-photo.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -12,15 +11,24 @@ body {
    justify-content: space-around;
 }
 /* Ascend Notes title */
-.formContainer{
+.formContainer {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
 }
 
-.formContainer h1{
+.formContainer h1 {
   font-family: 'Akaya Kanadaka';
   font-size: 5em;
 }
 
+.noteOptions {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100px;
+}
+
+.noteOptions svg {
+  font-size: 40px;
+}
