--- a/frontend/src/components/css/App.css
+++ b/frontend/src/components/css/App.css
@@ -3,6 +3,7 @@ body {
   background-image: url("https://static.vecteezy.com/system/resources/previews/005/397/068/large_2x/fiberboard-board-texture-blank-kraft-paper-sheet-for-decoration-retro-grainy-surface-background-textured-vintage-wall-made-of-natural-fiber-decorative-and-design-handmade-brown-cardboard-photo.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100vh;
 }
 
 .container {
